# upmem-tensor-multiplication-runtime

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  gemv_scaling_test.sh  generate_mpi_references.sh  makefile  readme.md  slurm_generate_references.sh  slurm_submit_weak_scaling_samples.sh  weak_scaling.sh
benchmarks/: 1gb_square_benchmark.c  CMakeLists.txt  back_to_back_multiplication_benchmark.c  makefile  test_from_file.c
benchmarks/scripts/: cuda_reference_generate.py  gemv_random_test.sh  generate_weak_scaling_samples.py  mpi_reference_generate.py  strong_scaling_tests.sh  weak_scaling_tests.sh
cmake/: ParseParams.cmake
common/: dpu_multiply_matrices.h  host_multiply_matrices.h  test_assertions.h  timer.h
defn/: dependencies.yaml  params.yaml  unittests.yaml
experiments/: gemv_random_test.sh  gemv_scaling_test.sh  strong_scaling_tests.sh  sustained-bandwidth-experiment.sh  weak_scaling.sh  weak_scaling_tests.sh
scripts/: generate_random_matrix.py  params_to_cmake.py  slurm_submit_weak_scaling_samples.sh  slurm_weak_scaling_samples.sh
src/: CMakeLists.txt  dpu_pim_matrix_multiply_kernel_arguments.h  matrix.c  matrix.h  pim_matrix_multiplication_frame.c  pim_matrix_multiplication_frame.h
src/dpu/: pim_dpu_matrix_multiply.c
tests/: CMakeLists.txt  Makefile  pim-matrix-multiplication-frame-unittests.c  test_get_row_col_out_of_bounds.c  test_get_row_col_out_of_bounds.cpp  test_join_unmatching_dimensions_error.c  test_join_unmatching_dimensions_error.cpp  test_matrix_add_cols_with_custom_fill.c  test_matrix_add_cols_with_custom_fill.cpp  test_matrix_add_cols_with_zero_fill.c  test_matrix_add_cols_with_zero_fill.cpp  test_matrix_add_remove_roundtrip.c  test_matrix_add_remove_roundtrip.cpp  test_matrix_add_rows_cols_different_types.c  test_matrix_add_rows_cols_different_types.cpp  test_matrix_add_rows_cols_error_cases.c  test_matrix_add_rows_cols_error_cases.cpp  test_matrix_add_rows_with_custom_fill.c  test_matrix_add_rows_with_custom_fill.cpp  test_matrix_add_rows_with_zero_fill.c  test_matrix_add_rows_with_zero_fill.cpp  test_matrix_clone_and_compare.c  test_matrix_clone_and_compare.cpp  test_matrix_col_split_join.c  test_matrix_col_split_join.cpp  test_matrix_create_from_2d_array_and_free.c  test_matrix_create_from_2d_array_and_free.cpp  test_matrix_create_from_column_major_array_and_free.c  test_matrix_create_from_column_major_array_and_free.cpp  test_matrix_create_from_row_major_array_and_free.c  test_matrix_create_from_row_major_array_and_free.cpp  test_matrix_creation_data_too_small_error.c  test_matrix_creation_data_too_small_error.cpp  test_matrix_extract_submatrix.c  test_matrix_extract_submatrix.cpp  test_matrix_get_4d_data.c  test_matrix_get_4d_data.cpp  test_matrix_get_row_col.c  test_matrix_get_row_col.cpp  test_matrix_print_and_sprint.c  (+36 more)
